<?xml version="1.0"?>
<package format="2">
  <name>turtlebot_walker</name>
  <version>0.1.0</version>
  <description>Package to run a Turtlebot that avoid obstacles.</description>

  <maintainer email="rcunning@umd.edu">Ryan Cunningham</maintainer>
  <license>BSD</license>
  <url type="website">https://github.com/cunninghamr/turtlebot_walker</url>
  <author email="rcunning@umd.edu">Ryan Cunningham</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>pcl</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>message_generation</build_export_depend>
  <build_export_depend>pcl</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>pcl</exec_depend>

  <test_depend>rosunit</test_depend>
</package>
